--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,16 @@ name = "MLETask"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = "==3.10.*"
 dependencies = [
+    "flake8>=7.3.0",
+    "graphviz>=0.21",
     "jupyter>=1.1.1",
-    "pytest>=8.4.1",
+    "matplotlib>=3.10.5",
+    "pandas>=2.3.1",
+    "pytest-cov>=6.2.1",
+    "pytest-xdist>=3.8.0",
+    "seaborn>=0.13.2",
+    "shap>=0.48.0",
+    "xgboost>=3.0.3",
 ]
