--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -12,5 +12,5 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: install
-        uses: ./.github/actions/install-deps/action.yml
+        uses: ./.github/actions/install-deps
           
