--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/astral-sh/uv:python3.10-bookworm-slim
     environment: dev
     steps:
       - name: Checkout repository
