--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
     "matplotlib>=3.10.5",
     "pandas>=2.3.1",
     "pandera>=0.25.0",
+    "pyarrow>=21.0.0",
     "pytest-cov>=6.2.1",
+    "pytest-mock>=3.14.1",
     "pytest-xdist>=3.8.0",
     "pytype>=2024.10.11",
     "seaborn>=0.13.2",
