--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "joblib>=1.5.1",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.5",
+    "omegaconf>=2.3.0",
     "pandas>=2.3.1",
     "pandera>=0.25.0",
     "pyarrow>=21.0.0",
