--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -15,4 +15,6 @@ jobs:
         uses: actions/checkout@v4
       - name: install
         uses: ./.github/actions/install-deps
+      - name: linting
+        uses: ./.github/actions/linting
           
