--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,13 +8,12 @@
     "editor.codeActionsOnSave": {
         "source.organizeImports": "explicit"
     },
-    "[python]" : {
-        "editor.defaultFormatter": "ms-python.black-formatter",
-        "editor.formatOnSave": true,
-        "source.organizeImports": true
-    },
+    // "[python]" : {
+    //     "editor.defaultFormatter": "ms-python.black-formatter",
+    //     "editor.formatOnSave": true,
+    //     "source.organizeImports": true
+    // },
     "files.autoSave": "onFocusChange",
-    "flake8.args": [
-        "--max-line-length=120"
-    ]
+    // "ruff.lint.extendSelect": ["ALL"],
+    "ruff.lineLength": 120,
 }
