--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.10.*"
 dependencies = [
-    "black>=25.1.0",
-    "flake8>=7.3.0",
     "graphviz>=0.21",
     "joblib>=1.5.1",
     "jupyter>=1.1.1",
@@ -19,6 +17,7 @@ dependencies = [
     "pytest-mock>=3.14.1",
     "pytest-xdist>=3.8.0",
     "pytype>=2024.10.11",
+    "ruff>=0.12.7",
     "seaborn>=0.13.2",
     "shap>=0.48.0",
     "xgboost>=3.0.3",
