--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = "==3.10.*"
 dependencies = [
     "graphviz>=0.21",
+    "ipython>=8.37.0",
     "joblib>=1.5.1",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.5",
